smithy-model/src/test/resources/software/amazon/smithy/model/loader/valid/operations/operation-with-all.smithy
$version: "2.0"
namespace smithy.example

operation GetFoo {
    input: GetFooInput
    output: GetFooOutput
    errors: []
}

@input
structure GetFooInput {}

@output
structure GetFooOutput {}
