smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/inline-io/inline-single-error.smithy
// Parse error at line 6, column 12 near `= `
$version: "2.0"
namespace smithy.example

operation MyOperation {
    errors = [
        := {}
    ]
}
